--- a/StateRestorationSample/Base.lproj/Main.storyboard
+++ b/StateRestorationSample/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="StateRestorationSample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="ViewController" id="vXZ-lx-hvc" customClass="ViewController" customModule="StateRestorationSample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
